{"message":"Update file: collection.yml","userId":"1265","fileName":"collection.yml"}

--- a/_student-user-guide/collection.yml
+++ b/_student-user-guide/collection.yml
@@ -23,7 +23,7 @@ collections:
       - Assess/(A3,1) Formatting & Paragraphing.md
       - Assess/(A3,2) Insert Tables.md
       - Assess/(A3,3) Upload File.md
-      - Assess/(A3,4) Insert Drawing.md
+      - Assess/(A3,4) Insert Drawing (Enhanced).md
       - Assess/(A3,5) Insert Chinese or Tamil Text.md
       - Assess/(A3,6) Insert Mathematical or Chemical Equations.md
       - Assess/(A3,7) Insert & Edit Links.md
